--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <div id="frame1">
-        <img src="https://github.com/hancoc31/hancoc31.github.io/blob/main/Resized_20230805_080729.jpeg" alt="Image">
+        <img src="https://github.com/hancoc31/hancoc31.github.io/blob/main/Resized_20230805_080729.jpeg?raw=true" alt="Image">
     </div>
     <div id="frame2">
         <ul>
